kube-pods1/app_pod_ruby.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: ruby_deployment
spec: 
  replicas: 3 
  selector: 
    matchLabels: 
      app: ruby 
  template: 
    metadata: 
      labels: 
        app: ruby 
    spec: 
      containers: 
      - name: ruby_container
        image: dockersheepo/sae503:latest
