kube-pods1/app_pod_saphir.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: saphir_deployment
spec: 
  replicas: 3 
  selector: 
    matchLabels: 
      app: saphir 
  template: 
    metadata: 
      labels: 
        app: saphir 
    spec: 
      containers: 
      - name: saphir_container
        image: dockersheepo/sae503:latest
