kube-pods1/service-diamant.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: diamant-service 
spec: 
  selector: 
    app: diamant 
  ports: 
    - protocol: TCP 
      port: 3084
      targetPort: 8000 
  type: ClusterIP
