kube-pods1/service-ruby.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: ruby-service 
spec: 
  selector: 
    app: ruby 
  ports: 
    - protocol: TCP 
      port: 3080 
      targetPort: 3080 
  type: ClusterIP
