kube-pods1/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: IngressTraefik
  namespace: default
spec:
  rules:
  - host: grp1_test.net
    http:
      paths:
      - path: /ruby
        pathType: Prefix
        backend:
          service:
            name: ruby-service
            port:
              number: 3081
      - path: /saphir
        pathType: Prefix
        backend:
          service:
            name: saphir-service
            port:
              number: 3082
      - path: /emeraude
        pathType: Prefix
        backend:
          service:
            name: emeraude-service
            port:
              number: 3083
      - path: /diamant
        pathType: Prefix
        backend:
          service:
            name: diamant-service
            port:
              number: 3084
